@@ -1,0 +1,27 @@
+# AUTO-GENERATED by tools/checkspecs.py - DO NOT EDIT
+from nipype.testing import assert_equal
+from nipype.interfaces.dipy.preprocess import Denoise
+
+def test_Denoise_inputs():
+    input_map = dict(in_file=dict(mandatory=True,
+    ),
+    in_mask=dict(),
+    noise_model=dict(mandatory=True,
+    usedefault=True,
+    ),
+    )
+    inputs = Denoise.input_spec()
+
+    for key, metadata in input_map.items():
+        for metakey, value in metadata.items():
+            yield assert_equal, getattr(inputs.traits()[key], metakey), value
+
+def test_Denoise_outputs():
+    output_map = dict(out_file=dict(),
+    )
+    outputs = Denoise.output_spec()
+
+    for key, metadata in output_map.items():
+        for metakey, value in metadata.items():
+            yield assert_equal, getattr(outputs.traits()[key], metakey), value
+
